--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
-set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -sg escape-time 10
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
