Updated to current config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set-option -g focus-events on
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -sa terminal-overrides ',xterm'
 set-option -sg escape-time 10
 
 bind h select-pane -L
