Update hypr conf to work on multi monitor and launch some things

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,8 @@ monitor=,preferred,auto,auto
 exec-once=waybar
 exec-once=~/.config/hypr/scripts/sleep.sh
 exec-once=dunst
-
+exec-once=eval $(ssh-agent)
+exec-once=/usr/libexec/polkit-kde-authentication-agent-1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
@@ -122,7 +123,6 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -131,6 +131,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, F, fakefullscreen
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -140,6 +141,9 @@ bind = $mainMod, L, exec, swaylock -f && hyprctl dispatch dpms off
 
 bind = $mainMod CTRL, right, workspace, r+1
 bind = $mainMod CTRL, left, workspace, r-1
+
+bind = $mainMod ALT, right, movewindow, mon:1
+bind = $mainMod ALT, left, movewindow, mon:0
 
 bind = $mainMod SHIFT, right, movetoworkspace, r+1
 bind = $mainMod SHIFT, left, movetoworkspace, r-1
