--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,4 @@
+set-option -a terminal-features 'xterm-256color:RGB'
 set-option -g focus-events on
-set-option -sa terminal-overrides ',xterm'
-set-option -sg escape-time 10
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
+setw -g aggressive-resize on
